--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,15 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 server.port=9090
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
-spring.datasource.username=postgres
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+# spring.datasource.username=postgres
+# spring.datasource.password=123
+# spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework.security=DEBUG
+
+spring.profiles.active=prod
